--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
         </div>
     </nav>
 
-    <section class="bg-header">
+    <section class="bg-header tl-color tx-color">
         <div class="container-lg">
             <div class="row py-5">
                 <div class="col-md-7 order-2 order-md-1">
-                    <h1 class="tl-color ft-szh1">Xubuntu is a community developed operating system that combines elegance and ease of use.</h1>
-                    <p class="tx-color pt-3 ft-sz16">Xubuntu is an elegant and easy to use operating system. Xubuntu comes with Xfce, which is a stable, light and configurable desktop environment.</p>
-                    <p class="tx-color ft-sz16">Xubuntu is perfect for those who want the most out of their desktops, laptops and netbooks with a modern look and enough features for efficient, daily usage. It works well on older hardware too.</p>
-                    <p>
-                        <button class="btn bt-color btn-outline-primary ft-sz16" title="Get Xubuntu" href="https://xubuntu.org/getxubuntu/">Download</button>
-                        <button class="btn bt-color btn-outline-primary ft-sz16" title="Xubuntu Feature Tour" href="https://xubuntu.org/tour/">Take the Feature Tour</button>
+                    <h1 class="ft-szh1">Xubuntu is a community developed operating system that combines elegance and ease of use.</h1>
+                    <p class="ft-sz16 pt-3">Xubuntu is an elegant and easy to use operating system. Xubuntu comes with Xfce, which is a stable, light and configurable desktop environment.</p>
+                    <p class="ft-sz16">Xubuntu is perfect for those who want the most out of their desktops, laptops and netbooks with a modern look and enough features for efficient, daily usage. It works well on older hardware too.</p>
+                    <p class="ft-sz16">
+                        <button class="btn btn-outline-primary" title="Get Xubuntu" href="https://xubuntu.org/getxubuntu/">Download</button>
+                        <button class="btn btn-outline-primary" title="Xubuntu Feature Tour" href="https://xubuntu.org/tour/">Take the Feature Tour</button>
                     </p>
                 </div>
                 <div class="col-md-5 order-1 order-md-2 align-self-center text-center text-md-end pb-5 pb-md-0">
@@ -112,127 +112,127 @@
         </div>
     </section>
 
-    <section class="bg-section-one">
+    <section class="bg-section-one tx-color">
         <div class="container-lg">
             <div class="row py-5">
                 <div class="col-md-6">
                     <h2 class="ft-szh2">Xubuntu 24.04</h2>
                     <p class="ft-sz14">Xubuntu 24.04 "Noble Numbat" was released in April 2024. This stable LTS release is supported until April 2027.</p>
                     <p>
-                        <button class="btn bt-color btn-outline-primary ft-sz14" href="https://xubuntu.org/download/#lts">Download</button>
-                        <button class="btn bt-color btn-outline-primary ft-sz14" href="https://xubuntu.org/release/24-04/">Release page</button>
+                        <button class="btn btn-outline-primary ft-sz14" href="https://xubuntu.org/download/#lts">Download</button>
+                        <button class="btn btn-outline-primary ft-sz14" href="https://xubuntu.org/release/24-04/">Release page</button>
                     </p>
                 </div>
                 <div class="col-md-6 pt-4 pt-md-0">
                     <h2 class="ft-szh2">Official Xubuntu products</h2>
                     <p class="ft-sz14">Xubuntu products from stickers to clothing are available to order worldwide from our officially endorsed vendors. Get yours now!</p>
                     <p>
-                        <button class="btn bt-color btn-outline-primary ft-sz14" href="http://xubuntu.org/products/">See all products</button>
-                        <button class="btn bt-color btn-outline-primary ft-sz14" href="https://www.hellotux.com/xubuntu_womens_tshirt_black">New! Women's t-shirts</button>
+                        <button class="btn btn-outline-primary ft-sz14" href="http://xubuntu.org/products/">See all products</button>
+                        <button class="btn btn-outline-primary ft-sz14" href="https://www.hellotux.com/xubuntu_womens_tshirt_black">New! Women's t-shirts</button>
                     </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="bg-section-two">
+    <section class="bg-section-two tx-color">
         <div class="container-lg">
             <div class="row py-5">
                 <div class="col-md-4">
                     <h2 class="ft-szh2">Xubuntu 21.04 Testing Week</h2>
                     <p class="ft-sz14">We’re delighted to announce that we’re participating in another ‘Ubuntu Testing Week’ from April 1st to April 7th with other flavours in the Ubuntu family. On April 1st, the beta version of Xubuntu 21.04 ‘Hirsute Hippo’ will be released after halting all new changes to its features, user interface and documentation. Between April 1st and […]</p>
                     <p>
-                        <button class="btn bt-color btn-outline-primary ft-sz14" href="https://xubuntu.org/news/xubuntu-21-04-testing-week/">Read more</button>
+                        <button class="btn btn-outline-primary ft-sz14" href="https://xubuntu.org/news/xubuntu-21-04-testing-week/">Read more</button>
                     </p>
                 </div>
                 <div class="col-md-4 py-3 py-md-0 px-md-4">
                     <h2 class="ft-szh2">Xubuntu is now on GitHub!</h2>
                     <p class="ft-sz14">On Tuesday, May 18th, the Xubuntu Team voted to migrate some of our infrastructure away from Launchpad to GitHub for code hosting, while translations are now on Transifex. Here’s a summary of the changes: We have a new GitHub organization, under the Xubuntu name. Each subteam has an equivalent in the new organization. All codebases […]</p>
                     <p>
-                        <button class="btn bt-color btn-outline-primary ft-sz14" href="https://xubuntu.org/news/xubuntu-is-now-on-github/">Read more</button>
+                        <button class="btn btn-outline-primary ft-sz14" href="https://xubuntu.org/news/xubuntu-is-now-on-github/">Read more</button>
                     </p>
                 </div>
                 <div class="col-md-4">
                     <h2 class="ft-szh2">The Team Blog</h2>
                     <p class="ft-sz14">Find more articles about all things related to Xubuntu and its development in the team blog!</p>
                     <p>
-                        <button class="btn bt-color btn-outline-primary ft-sz14" href="http://xubuntu.org/blog/">The Team Blog</button>
+                        <button class="btn btn-outline-primary ft-sz14" href="http://xubuntu.org/blog/">The Team Blog</button>
                     </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="bg-footer">
+    <footer class="bg-footer ft-sz12 tx-color">
         <div class="container-lg">
             <div class="row pt-4">
                 <div class="col">
-                    <p class="ft-sz12 tx-color"><strong>Social media</strong>
+                    <p><strong>Social media</strong>
                         <span>
-                            <a class="link-secondary ps-1 lk-hover" href="https://twitter.com/Xubuntu">@Xubuntu on Twitter</a>
-                            <a class="link-secondary ps-1 lk-hover" href="http://www.facebook.com/xubuntuusers">Xubuntu Users on Facebook</a>
-                            <a class="link-secondary ps-1 lk-hover" href="https://floss.social/@xubuntu">@Xubuntu@floss.social on Mastodon</a>
+                            <a class="link-secondary ps-1" href="https://twitter.com/Xubuntu">@Xubuntu on Twitter</a>
+                            <a class="link-secondary ps-1" href="http://www.facebook.com/xubuntuusers">Xubuntu Users on Facebook</a>
+                            <a class="link-secondary ps-1" href="https://floss.social/@xubuntu">@Xubuntu@floss.social on Mastodon</a>
                         </span>
                     </p>
                 </div>
             </div>
-            <div class="row pt-3 pb-4">
+            <div class="row pt-3 pb-4 lt-decor lk-mod">
                 <div class="col-md-4 col-lg-2">
-                    <ul class="lt-decor p-0">
-                        <li class="nav-item ft-sz14 lk-hover"><a class="nav-link" href="https://xubuntu.org/getxubuntu/">Get Xubuntu</a></li>
-                        <li class="nav-item ft-sz12 pt-2 lk-hover"><a class="nav-link" href="https://xubuntu.org/download/"><strong>Download</a></strong></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" ref="https://xubuntu.org/requirements/">System Requirements</a></li>
+                    <ul class="p-0">
+                        <li class="ft-sz14"><a class="nav-link" href="https://xubuntu.org/getxubuntu/">Get Xubuntu</a></li>
+                        <li class="pt-2"><a class="nav-link" href="https://xubuntu.org/download/"><strong>Download</a></strong></li>
+                        <li class=""><a class="nav-link" ref="https://xubuntu.org/requirements/">System Requirements</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-lg-2">
-                    <ul class="lt-decor p-0">
-                        <li class="nav-item ft-sz14 lk-hover"><a class="nav-link" href="https://xubuntu.org/tour/">About</li>
-                        <li class="nav-item ft-sz12 pt-2 lk-hover"><a class="nav-link" href="https://xubuntu.org/tour/"><strong>Take the Feature Tour</a></strong></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/about/">About Xubuntu</a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/releases/">Releases</a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/screenshots/">Screenshots</a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/press/">In the Press</a></li>
+                    <ul class="p-0">
+                        <li class="ft-sz14"><a class="nav-link" href="https://xubuntu.org/tour/">About</li>
+                        <li class="pt-2"><a class="nav-link" href="https://xubuntu.org/tour/"><strong>Take the Feature Tour</a></strong></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/about/">About Xubuntu</a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/releases/">Releases</a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/screenshots/">Screenshots</a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/press/">In the Press</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-lg-2">
-                    <ul class="lt-decor p-0">
-                        <li class="nav-item ft-sz14 lk-hover"><a class="nav-link" href="https://xubuntu.org/help/">Help & Support</a></li>
-                        <li class="nav-item ft-sz12 pt-2 lk-hover"><a class="nav-link" href="https://xubuntu.org/help/"><strong>Getting Support</strong></a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/irc/">IRC support</a></li>
+                    <ul class="p-0">
+                        <li class="ft-sz14"><a class="nav-link" href="https://xubuntu.org/help/">Help & Support</a></li>
+                        <li class="pt-2"><a class="nav-link" href="https://xubuntu.org/help/"><strong>Getting Support</strong></a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/irc/">IRC support</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-lg-2">
-                    <ul class="lt-decor p-0">
-                        <li class="nav-item ft-sz14 lk-hover"><a class="nav-link" href="https://xubuntu.org/contact/">The Community</a>
-                        <li class="nav-item ft-sz12 pt-2 lk-hover"><a class="nav-link" href="https://xubuntu.org/contact/"><strong>Contact Us</a></strong></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/resources/">Brand Resources</a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/products/">Products</a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/donations/">Donate</a></li>
+                    <ul class="p-0">
+                        <li class="ft-sz14"><a class="nav-link" href="https://xubuntu.org/contact/">The Community</a>
+                        <li class="fpt-2"><a class="nav-link" href="https://xubuntu.org/contact/"><strong>Contact Us</a></strong></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/resources/">Brand Resources</a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/products/">Products</a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/donations/">Donate</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-lg-2">
-                    <ul class="lt-decor p-0">
-                        <li class="nav-item ft-sz14 lk-hover"><a class="nav-link" href="https://xubuntu.org/contribute/">Development</a>
-                        <li class="nav-item ft-sz12 pt-2 lk-hover"><a class="nav-link" href="https://xubuntu.org/contribute/"><strong>Get Involved</strong></a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/dev/">Developer Area</a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/dev/derivatives/">For Derivatives</a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/dev/mirrors/">For Mirrors</a></li>
+                    <ul class="p-0">
+                        <li class="ft-sz14"><a class="nav-link" href="https://xubuntu.org/contribute/">Development</a>
+                        <li class="pt-2"><a class="nav-link" href="https://xubuntu.org/contribute/"><strong>Get Involved</strong></a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/dev/">Developer Area</a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/dev/derivatives/">For Derivatives</a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/dev/mirrors/">For Mirrors</a></li>
                     </ul></li>
                 </div>
                 <div class="col-md-4 col-lg-2">
-                    <ul class="lt-decor p-0">
-                        <li class="nav-item ft-sz14 lk-hover"><a class="nav-link" href="https://xubuntu.org/blog/">The Blog</a>
-                        <li class="nav-item ft-sz12 pt-2 lk-hover"><a class="nav-link" href="https://xubuntu.org/blog/"><strong>The Team Blog</strong></a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/news/category/news/">News</a></li>
-                        <li class="nav-item ft-sz12 lk-hover"><a class="nav-link" href="https://xubuntu.org/news/category/articles/">Articles</a></li>
+                    <ul class="p-0">
+                        <li class="ft-sz14"><a class="nav-link" href="https://xubuntu.org/blog/">The Blog</a>
+                        <li class="pt-2"><a class="nav-link" href="https://xubuntu.org/blog/"><strong>The Team Blog</strong></a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/news/category/news/">News</a></li>
+                        <li class=""><a class="nav-link" href="https://xubuntu.org/news/category/articles/">Articles</a></li>
                     </ul>
                 </div>
             </div>
             <div class="row pb-2">
                 <div class="col">
-                    <p class="ft-sz12">© 2012– The Xubuntu team. Xubuntu and Canonical are registered trademarks of Canonical Ltd.
+                    <p>© 2012– The Xubuntu team. Xubuntu and Canonical are registered trademarks of Canonical Ltd.
                         <br>
-                        The theme is designed and built by <a class="link-secondary lk-hover" href="http://open.knome.fi/">Pasi Lallinaho</a> and inspired by the Ubuntu website.
+                        The theme is designed and built by <a class="link-secondary" href="http://open.knome.fi/">Pasi Lallinaho</a> and inspired by the Ubuntu website.
                     </p>
                 </div>
             </div>
