--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Folha de Estilo -->
+    <!-- Folha de Estilo "!" Bootstrap v5.3.2 -->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;700&display=swap">
     <link rel="stylesheet" href="assets/scss/style.css">
 </head>
 
@@ -239,6 +239,7 @@
         </div>
     </footer>
 
+    <!-- Bootstrap v5.3.2 -->
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
